# manawar-engine

./: .clang-format  .gitignore  AnimatedModel.cpp  AnimatedModel.h  Animation.cpp  Animation.h  AnimationBuilder.cpp  AnimationBuilder.h  AnimationFrame.cpp  AnimationFrame.h  AnimationFrames.cpp  AnimationFrames.h  AnimationShader.cpp  AnimationShader.h  Blog.md  CMakeLists.txt  CNAME  DebugShader.cpp  DebugShader.h  FbxLoader.cpp  FbxLoader.h  GLIncludes.h  GeometryBuilder.h  MasterClock.cpp  MasterClock.h  Matrix.cpp  Matrix.h  Model.cpp  Model.h  ModelFactory.cpp  ModelFactory.h  README.txt  ReBoot.vcxproj  ReBoot.vcxproj.filters  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h  ShadowShader.cpp  ShadowShader.h  (+25 more)
audio/include/: AudioManager.h  BackgroundTheme.h
audio/source/: BackgroundTheme.cpp
audio/src/: AudioManager.cpp  BackgroundTheme.cpp
buffers/include/: DeferredFrameBuffer.h  DepthFrameBuffer.h  MRTFrameBuffer.h  RenderBuffers.h
buffers/src/: DeferredFrameBuffer.cpp  DepthFrameBuffer.cpp  MRTFrameBuffer.cpp  RenderBuffers.cpp
docs/: ReBoot-Design.vsdx
drawbuffers/include/: DeferredFrameBuffer.h  DepthFrameBuffer.h  MRTFrameBuffer.h  RenderBuffers.h  VAO.h
drawbuffers/src/: DeferredFrameBuffer.cpp  DepthFrameBuffer.cpp  MRTFrameBuffer.cpp  RenderBuffers.cpp  VAO.cpp
dx/: DXLayer.cpp  DXLayer.h
dx/include/: ConstantBuffer.h  D3D12RaytracingHelpers.hpp  DXLayer.h  PipelineShader.h  PresentTarget.h  RayTracingPipelineShader.h  ResourceBuffer.h  d3d12.h  d3dx12.h
dx/src/: ConstantBuffer.cpp  DXLayer.cpp  PipelineShader.cpp  PresentTarget.cpp  RayTracingPipelineShader.cpp  ResourceBuffer.cpp
dxLayer/include/: ConstantBuffer.h  DXLayer.h  PipelineShader.h  RayTracingPipelineShader.h  ResourceBuffer.h  ShaderTable.h
dxLayer/src/: ConstantBuffer.cpp  DXLayer.cpp  PresentTarget.cpp  RayTracingPipelineShader.cpp
effects/include/: Effect.h  SSAO.h  SSCompute.h  Water.h
effects/src/: Bloom.cpp  Effect.cpp  SSAO.cpp  SSCompute.cpp  Water.cpp
engine/include/: EngineManager.h  EngineState.h  MasterClock.h
engine/src/: EngineManager.cpp  EngineState.cpp  MasterClock.cpp
events/include/: MasterClock.h  SceneManager.h  SimpleContext.h  SimpleContextEvents.h  UpdateInterface.h  ViewManager.h
events/src/: Camera.cpp  MasterClock.cpp  SceneManager.cpp  SimpleContext.cpp  SimpleContextEvents.cpp  UpdateInterface.cpp  ViewManager.cpp  ViewManagerEvents.cpp
gl/include/: GLIncludes.h
gl/src/: HighPerfGPUExports.cpp
glLayer/include/: GLIncludes.h
glLayer/src/: HighPerfGPUExports.cpp  gl3w.c
io/include/: Dirent.h  EventSubscriber.h  Font.h  IOEventDistributor.h  IOEvents.h  Logger.h  Picker.h  Terminal.h
io/src/: Dirent.cpp  EventSubscriber.cpp  Font.cpp  IOEventDistributor.cpp  IOEvents.cpp  Logger.cpp  Picker.cpp  Terminal.cpp  main.cpp
lights/include/: DirectionalShadow.h  Light.h  PointShadow.h  ShadowedDirectionalLight.h  ShadowedPointLight.h
lights/src/: DirectionalShadow.cpp  Light.cpp  PointShadow.cpp  ShadowedDirectionalLight.cpp  ShadowedPointLight.cpp
math/include/: FunctionState.h  GeometryMath.h  MVP.h  Matrix.h  StateVector.h  Tex2.h  Vector4.h  VectorUtil.h
math/src/: GeometryMath.cpp  MVP.cpp  Matrix.cpp  StateVector.cpp  Tex2.cpp  Vector4.cpp
model/include/: AnimatedModel.h  Animation.h  AnimationBuilder.h  AnimationShader.h  AudioManager.h  Blur.h  CubeMap.h  DebugShader.h  DeferredFrameBuffer.h  DeferredRenderer.h  DepthFrameBuffer.h  Effect.h  Entity.h  EnvironmentMap.h  Factory.h  FbxLoader.h  Font.h  ForwardRenderer.h  ForwardShader.h  FrameBuffer.h  FunctionState.h  GLIncludes.h  GeometryBuilder.h  LayeredTexture.h  Light.h  MRTFrameBuffer.h  MVP.h  MasterClock.h  Model.h  ModelBroker.h  ModelFactory.h  Noise.h  NoiseData.h  Picker.h  PointShadowMap.h  PointShadowRenderer.h  RenderBuffers.h  SSAO.h  SceneManager.h  Shader.h  (+17 more)
model/src/: AnimatedModel.cpp  Animation.cpp  AnimationBuilder.cpp  AnimationShader.cpp  AudioManager.cpp  Blur.cpp  CubeMap.cpp  CubeMapRenderer.cpp  DebugShader.cpp  DeferredFrameBuffer.cpp  DeferredRenderer.cpp  DepthFrameBuffer.cpp  Entity.cpp  EnvironmentMap.cpp  FbxLoader.cpp  Font.cpp  ForwardRenderer.cpp  ForwardShader.cpp  FrameBuffer.cpp  LayeredTexture.cpp  Light.cpp  MRTFrameBuffer.cpp  MVP.cpp  MasterClock.cpp  Matrix.cpp  Model.cpp  ModelBroker.cpp  ModelFactory.cpp  Noise.cpp  Picker.cpp  PointShadowMap.cpp  PointShadowRenderer.cpp  ProcIsland.cpp  RenderBuffers.cpp  SSAO.cpp  SceneManager.cpp  Shader.cpp  ShadowFrameBuffer.cpp  ShadowRenderer.cpp  SimpleContext.cpp  (+15 more)
physics/include/: BSP.h  Cube.h  FrustumCuller.h  FrustumOcclusion.h  Geometry.h  GeometryGraphic.h  GeometryMath.h  OSP.h  OctNode.h  OctTree.h  Physics.h  Sphere.h  Triangle.h
physics/src/: BSP.cpp  Cube.cpp  FrustumCuller.cpp  FrustumOcclusion.cpp  Geometry.cpp  GeometryGraphic.cpp  GeometryMath.cpp  OSP.cpp  Physics.cpp  Sphere.cpp  Triangle.cpp
procedural/include/: Noise.h  NoiseData.h  ProcIsland.h  TileGenerator.h  WorldGenerator.h
procedural/src/: Noise.cpp  ProcIsland.cpp  TileGenerator.cpp  WorldGenerator.cpp
renderer/include/: CubeMapRenderer.h  DeferredRenderer.h  ForwardRenderer.h  ShadowRenderer.h
renderer/src/: CubeMapRenderer.cpp  DeferredRenderer.cpp  ForwardRenderer.cpp  ShadowRenderer.cpp
screenspace/include/: Bloom.h  Blur.h  Effect.h  SSAO.h  SSCompute.h  SSComputeRGB.h  Water.h
screenspace/src/: Bloom.cpp  Blur.cpp  Effect.cpp  SSAO.cpp  SSCompute.cpp  SSComputeRGB.cpp  Water.cpp
shaders/: animatedShadowShader.frag  animatedShadowShader.vert  animationShader.frag  animationShader.vert  debugShader.vert  deferredShader.frag  deferredShader.vert  depthShader.frag  depthShader.vert  diffuseShader.frag  diffuseShader.vert  hagravenBoneShader.vert  humanBoneShader.frag  humanBoneShader.vert  mrtShader.frag  mrtShader.vert  normalShader.frag  normalShader.vert  simpleShader.vert  trollBoneShader.vert  werewolfBoneShader.frag  werewolfBoneShader.vert  wolfBoneShader.vert
shading/include/: AnimationShader.h  BlitDepthShader.h  ComputeShader.h  DebugShader.h  DeferredShader.h  (+21 more)
(+162 files in other folders)
